--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
 streamlit
 numpy 
 opencv-python
-numpy
-opencv-python
 Pillow
 torch>=1.7
 torchvision
 tqdm
-opencv-contrib-python
-libgl1-mesa-glx
-mesa-libGL
-xvfb
+basicsr>=1.4.2
+facexlib>=0.2.5
+gfpgan>=1.3.5
